<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">johndoe@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="invalid_email">The email you entered is invalid</string>
    <string name="invalid_password">Password must contain at least 8 character</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="empty_input">This field must not be empty</string>
    <string name="invalid_form">You must follow the instructions to fill the form correctly</string>
    <string name="welcome">Welcome,</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="story_image">Story Image</string>
    <string name="story">Story</string>
    <string name="desc_hint">Type caption here</string>
    <string name="image_preview">image preview</string>
    <string name="gallery">Gallery</string>
    <string name="open_camera">open camera</string>
    <string name="upload_story">Upload story</string>
    <string name="no_stories">There are no recent story posted</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
</resources>