<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:context=".ui.login.LoginActivity"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_welcome"
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:importantForAccessibility="no"
                android:src="@drawable/undraw_welcome_cats_thqn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_welcome"
                android:text="@string/login"
                android:textSize="32sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                android:textSize="16sp"
                />

            <com.example.storyapp.ui.custom_view.CustomEmailTextField
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_email"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email_hint"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_email"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:text="@string/password"
                android:textSize="16sp"
                />

            <com.example.storyapp.ui.custom_view.CustomPasswordTextField
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_password"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_password"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cornerRadius="8dp"
                android:text="@string/login"
                android:textSize="18sp"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_dont_have_an_account"
                app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_an_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_dont_have_an_account"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dont_have_an_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:text="@string/dont_have_an_account"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_dont_have_an_account"
                app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_an_account"
                app:layout_constraintStart_toEndOf="@id/tv_dont_have_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sign_up"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cornerRadius="8dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible"
        tools:indeterminate="false"
        />
</FrameLayout>